--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MergeMaid
 Version: 2.0-1
-Date: 2004-5-27
+Date: 2004-9-14
 Title: Merge Maid
 Author: Xiaogang Zhong <zhong@ams.jhu.edu> Leslie Cope <cope@jhu.edu> Elizabeth Garrett
         <esg@jhu.edu> Giovanni Parmigiani <gp@jhu.edu>
@@ -16,7 +16,7 @@ Description: The functions in this R extension are intended for
 	Other functions use the output from 'modelOutcome' to graphically
         display the results and cross-validate associations of gene
         expression data with survival.
-Depends: R (>= 1.7.0), survival
+Depends: R (>= 1.5.0), survival, Biobase
 License: GPL version 2 or higher
 URL: http://astor.som.jhmi.edu/MergeMaid
-
+Packaged: Mon Sep 20 11:27:26 2004; zhong
