--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,4 +19,5 @@ Description: The functions in this R extension are intended for
 Depends: R (>= 2.2.0), survival, Biobase, MASS
 License: GPL version 2 or higher
 URL: http://astor.som.jhmi.edu/MergeMaid
+biocViews: Microarray, DifferentialExpression, Visualization
 
