Mar 05th updates by SZ
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MergeMaid@22963 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 import(Biobase,graphics)
+export(mergeExprs)
 exportClasses("mergeExpressionSet","mergeCor", "mergeCoeff")
 exportPattern("^[^\\.]")
 exportMethods(exprs, geneNames, names, notes, phenoData, length, show,
